--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
+  "author": "Alex Ehrnschwender",
   "name": "deploy-hook",
   "keywords": "node, deploy, service hook",
   "description": "Lightweight Node.JS deployer to be used with Bitbucket or Github POST service hooks",
   "version": "0.1.0",
+  "repository": {
+      "url": "https://github.com/alexanderscott/node-deploy-hook"
+  },
   "dependencies": {
     "express": "~3.4.0",
     "nodemailer": "~0.5.2"
